# nlp_service

./: .gitignore  client.py  constants.py  main.py  nlp_service_readme.md  pyproject.toml  requirements.txt
adapters/: purchase_loader.py  sales_loader.py
analyzer/: customer_analyzer.py  product_analyzer.py  sales_analyzer.py
analyzers/: base.py  base_analyzer.py  category_analyzer.py  customer_analyzer.py  product_analyzer.py  purchase_analyzer.py  sales_analyzer.py  satis_analyzer.py  temmuz_analyzer.py  toplam_satis_analyzer.py
data/: personel_satis.csv  purchase_large.csv  sales_data.csv  sales_large.csv
engine/: analyzer_registry.py  base.py  entity_extractor.py  intent_resolution.py  nlp_engine.py  patterns.json  purchase_analyzer.py  request_resolver.py  sales_analyzer.py
test/: test_analyzer.py
tests/: test_nlp_engine.py  test_purchase_analyzer.py  test_sales_analyzer.py
tests/analyzers/: test_purchase_analyzer.py  test_sales_analyzer.py
